fix(dropdown): cleanup code, remove scrolling for now